reserve success page with responsive

--- a/src/app/equipment-reserve-success/equipment.reserve-success.html
+++ b/src/app/equipment-reserve-success/equipment.reserve-success.html
@@ -4,12 +4,12 @@
     <div class="container">
       <!-- START  Request Confirmation -->
       <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 sell-main-part">
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 req_job_tit nopadding reserve-success-heading">Request Confirmation</div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 req_job_tit nopadding reserve-success-heading req-confirm">Request Confirmation</div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-right nopadding req-confirm">
           <button type="button" class="btn btn-default print_btn">Print Order Details</button>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_mar">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_mar nopadding">
           <p class="theme_clr reserve-success-heading">
             Thank You. Your (request) has been received and we have sent you a copy of this
             request on your email address
@@ -77,7 +77,7 @@
       </div>
       <!-- End  Request Confirmation -->
 
-      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 need_main">
+      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 need_main">
         <!-- START  Noble Iron Help -->
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 need_part">
           <h2 class="need_title">Need Noble Iron Help?</h2>
