--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -300,7 +300,7 @@ a:focus { color: #0099cc;
 .fa-star{color: #ff5600;}
 .fa-star-half-o{color: #ff5600;}
 .fa-star-o{color: #ff5600;}
-.daily_price{font-family: 'Open Sans', sans-serif; font-weight: 800; font-size: 16px;}
+.daily_price{font-family: 'Open Sans', sans-serif; font-weight: 600; font-size: 18px;}
 .daily_title{font-family: 'Open Sans', sans-serif; font-weight: 500; font-size: 12px;}
 .fa-eye{color: #c2c2c2;}
 .fa-heart{color: #c2c2c2;}
@@ -321,18 +321,21 @@ a:focus { color: #0099cc;
 .fa-filter{ color: #848e97;}
 .my-reserve-list{color: #009ddc; border: solid 1px #009ddc; padding:10px 35px; display: block; margin:21px auto 0 auto;}
 .add-list{color: #009ddc; border: solid 1px #009ddc; padding:10px 13px; display: block; margin:21px auto 0 auto;}
-.star_list{padding: 0 0 0 15px;}
+.star_list{padding: 0 0 0 9px;}
 .heart_list{color: #666666; margin: 10px 0 0;
             overflow: hidden;}
-.heart_list ul{}
+.heart_list ul{font-size: 12px;}
 .heart_list ul li{padding: 0 1% 0 0; float: left;
                   width: 34%;}
 .heart_list ul li a{font-size: 15px;}
 .fa-icon-clr{color: #c2c2c2;}
-.eye_view{padding: 0 0 0 10px;}
+.eye_view{padding: 0 0 0 10px; font-size: 13px;}
 .list-icon-top{margin: 5px 0 0 0;}
 .heart_list ul li:nth-child(3){width: 31%; text-align: center;}
 .star-list-top{margin: 15px 0 0 0;}
+.star-list-top a i {
+    font-size: 16px;
+}
 .list-product{}
 .lift-list img{}
 .certy-list{ position: absolute;
@@ -472,7 +475,7 @@ a:focus { color: #0099cc;
 .product_menu ul{margin: 0; padding: 0;}
 .product_menu ul li{display: inline;}
 .product_menu ul li a{   color: #009ddc;
-                         font-size: 15px;
+                         font-size: 13px;
                          line-height: 35px;
                          padding: 0 5px;}
 .product_menu ul li a.active{ color: #666;}
@@ -516,7 +519,7 @@ a:focus { color: #0099cc;
            width: 150px;
            font-size: 13px;}
 .go_back{}
-.go_back a{line-height: 35px;  font-size: 15px; color: #009ddc;}
+.go_back a{line-height: 35px;  font-size: 13px; color: #009ddc;}
 .product_or{position: relative; top: -13px; font-size: 16px; color: #666666;}
 .product_dash_lf{width:47%;}
 .product_dash_rg{width:47%;}
