Search page changes

--- a/src/app/search/grid.html
+++ b/src/app/search/grid.html
@@ -44,7 +44,7 @@
 
         </li>
         <li>
-          <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x" btn-load-indicator="Add:Wishlist:Process"  btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i></a>
+          <a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x" btn-load-indicator="Add:Wishlist:Process"  btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i></a>
         </li>
       </ul>
     </div>
