--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -9,7 +9,7 @@
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side show-for-small" ng-class="{'show-filter': showFilter}">
           <div class="col-lg-12">
             <i class="fa fa-filter fa-lg"></i>
-            <span class="filter">Filter Results:</span>
+            <span class="filter">Filter Results</span>
           </div>
           <div class="col-lg-12 category_filter1">
             <h5 class="cat_side_title">Category
@@ -19,10 +19,10 @@
               <div>
                 <ul class="categories" >
                   <li ng-click="selectCategory(subcategories)">
-                    <a class="category-name on-hover-pointer" ng-checked="subcategories.Id == selectedCategory.Id" ng-class="{'active-sub-category': subcategories.Id == selectedCategory.Id}">
+                    <a class="category-name on-hover-pointer" ng-class="{'active-sub-category': subcategories.Id == flags.selectedCategory.Id}">
                       <span class="cat_mar">{{subcategories.Name}}</span>
                     </a>
-                    <ul class="sub-categories" ng-show="subcategories.Id == selectedCategory.Id">
+                    <ul class="sub-categories" ng-show="subcategories.Id ==flags.selectedCategory.Id">
                       <li ng-repeat="attribute in subcategories.Attribute">
                         <div>
                           {{attribute.Attribute_name}}
