Search page changes

--- a/src/app/scroll-top/scroll-top.html
+++ b/src/app/scroll-top/scroll-top.html
@@ -1,3 +1,3 @@
-<a class="scroll-to-top on-hover-pointer" ng-show="showTop">
+<a class="scroll-to-top on-hover-pointer fadable" ng-show="showTop">
   <i class="fa fa-arrow-circle-up"></i>
 </a>
