issues in search result page header page equiment detail page and dashboard page

--- a/src/app/equipment-detail/equipment-detail.html
+++ b/src/app/equipment-detail/equipment-detail.html
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 procuct_bor_bot text-right go_back noopad_mobile">
-        <a href=""> &lt;  Go Back to Listing Page</a>
+        <a href=""> <i class="fa fa-caret-left"></i> Go Back</a>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 prodetil_main">
         <div class="col-lg-2 col-md-2 nopadding">
