--- a/src/app/search/list.html
+++ b/src/app/search/list.html
@@ -1,5 +1,5 @@
 <div class="row nomargin">
-  <div class="col-md-12" ng-if="results.length"><hr class="dash"></div>
+  <!-- <div class="col-md-12" ng-if="results.length"><hr class="dash"></div> -->
   <div class="col-md-12 col-sm-6 col-xs-12 list-product" ng-repeat="item in results">
     <div class="col-md-3 lift-list">
       <figure class="search-res-figure">
@@ -68,6 +68,6 @@
         <span btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id">{{item.Is_in_catelog ? 'Added to Wishlist': 'Add to Wishlist'}}</span>
       </button>
     </div>
-    <div class="col-md-12"><hr class="dash"></div>
+    <!-- <div class="col-md-12"><hr class="dash"></div> -->
   </div>
 </div>
