--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -100,7 +100,7 @@
                     <span class="flot-right need_help"><a href="/#/forgot-password">Forgot Password ?</a></span>
                   </div>
                   <hr>
-                  <button type="submit" ng-click="login()"  class="btn btn-default flot-right sign_mybtn">
+                  <button type="submit" ng-click="login()"  class="btn btn-default flot-right sign_mybtn all-btn">
                     <span btn-load-indicator="Login:Process">Sign In</span>
                   </button>
                 </form>
@@ -147,7 +147,7 @@
                     Conditions</a></div>
                   <hr>
 
-                  <button type="submit" ng-disabled="!UserRegisterData.termsAccepted" ng-click="register()" class="btn btn-default flot-right sign_mybtn">
+                  <button type="submit" ng-disabled="!UserRegisterData.termsAccepted" ng-click="register()" class="btn btn-default flot-right sign_mybtn all-btn">
                     <span btn-load-indicator="SignUp:Process">Sign Up</span>
                   </button>
 
