--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -89,7 +89,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="" type="button" class="btn btn-default my-reserve">Reserve</a>
+                      <a ng-href="" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -138,7 +138,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -187,7 +187,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -236,7 +236,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -285,7 +285,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
@@ -334,7 +334,7 @@
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
                     </li>
                     <li>
-                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve">Reserve</a>
+                      <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve all-btn">Reserve</a>
                     </li>
                     <li>
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
