--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -1331,3 +1331,145 @@ button:hover {
   padding: 11px 18px;
   font-size: 13px;
 }
+
+/*cart css*/
+.cart-table {
+  border-bottom: 1px solid #ddd;
+}
+
+.equipment-desc h3 {
+  margin: 10px 0 5px 0;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.equipment-desc input {
+  margin: 3px 0 0 0;
+}
+
+.equipment-desc span {
+  vertical-align: inherit;
+  margin-left: 5px;
+  font-weight: 400;
+  font-size: 13px;
+}
+
+.equipment-desc .price-ul{
+  margin: 10px 0 0 0;
+}
+
+.price-ul li {
+  display: inline-block;
+  width: 25%;
+}
+
+.price-ul li .daily_title {
+  margin: 0 0 5px 0;
+}
+
+.cart-table tbody tr .vertically-middle {
+  vertical-align: middle;
+}
+
+.quantity {
+  width: 13%;
+}
+
+.quantity .form-control {
+  padding: 11px 5px;
+  font-size: 13px;
+  text-align: center;
+  height: auto;
+  width: 30%;
+  display: inline-block;
+  min-width: 70px;
+}
+
+.duration {
+  font-size: 13px;
+  font-weight: 400;
+}
+
+.duration .to {
+  text-align: center;
+  width: 53%;
+}
+
+.duration p:last-child {
+  margin: 0;
+}
+
+.area span {
+  font-size: 13px;
+  margin-left: 5px;
+}
+
+.area p {
+  margin: 5px 0 0 0;
+  font-size: 13px;
+}
+
+.area p a {
+  color: #009ddc;
+}
+
+.area p a:hover {
+  color: #23527c;
+}
+
+.pricing {
+  font-weight: 600;
+}
+
+.promo-code {
+  padding: 15px 0 35px;
+}
+
+.promo-code .form-control {
+  width: 50%;
+  display: inline-block;
+  padding: 11px 18px;
+  height: auto;
+}
+
+.total-price div {
+  text-align: right;
+  padding-right: 17%;
+}
+
+.total-price .total-price-div h3 {
+  font-weight: 600;
+  font-size: 15px;
+  margin: 10px 0 0 0;
+}
+
+.total-price-div h3 label {
+  margin-right: 15%;
+  font-weight: 600;
+}
+
+.total-price h3 .total {
+  font-weight: 700;
+}
+
+.cart-bottom-btn {
+  padding: 25px 0;
+}
+
+.cart-bottom-btn .sell-equ {
+  font-weight: 400;
+}
+
+.cart-bottom-btn .sign_mybtn {
+  margin-left: 10px;
+}
+
+
+
+
+
+
+
+
+
+
