shopping cart page responsive

--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 my-bottm-line manage_job_tit manage_job_tit_small">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 my-bottm-line manage_job_tit manage_job_tit_small shopping-cart-heading">
 			Shopping Cart
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
@@ -196,11 +196,11 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 promo-code">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 promo-code">
 			<input type="text" placeholder="Promo code" class="form-control">
 			<button class="btn btn-default sign_mybtn all-btn">Apply</button>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 total-price">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 total-price">
 			<div class="total-price-div">
 				<h3>
 					<label>Sub-Total Rental:</label>
@@ -227,10 +227,13 @@
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
 	</div>
 	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-bottom-btn">
-			<button class="btn pull-left sell-equ all-btn">Continue Renting</button>
-			<button class="btn pull-right sign_mybtn all-btn">Reserve Now</button>
-			<button class="btn pull-right sign_mybtn all-btn">Generate Quote</button>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 cont-rent-btn">
+			<button class="btn sell-equ all-btn">Continue Renting</button>
+		</div>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reserve-generate-btn">
+			<button class="btn sign_mybtn all-btn">Generate Quote</button>
+			<button class="btn sign_mybtn all-btn">Reserve Now</button>
+		</div>
 		</div>
 	</div>
 </div>
