--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -1333,6 +1333,10 @@ button:hover {
 }
 
 /*cart css*/
+.shopping-cart-heading {
+  padding: 10px 15px 0;
+}
+
 .cart-table {
   border-bottom: 1px solid #ddd;
 }
@@ -1422,7 +1426,7 @@ button:hover {
 }
 
 .promo-code {
-  padding: 15px 0 35px;
+  padding: 15px 15px 35px;
 }
 
 .promo-code .form-control {
@@ -1453,14 +1457,24 @@ button:hover {
 }
 
 .cart-bottom-btn {
-  padding: 25px 0;
+  padding: 25px 15px;
 }
 
-.cart-bottom-btn .sell-equ {
+.cont-rent-btn {
+  padding: 10px 15px;
+}
+
+.cont-rent-btn .sell-equ {
   font-weight: 400;
+  width: 150px;
 }
 
-.cart-bottom-btn .sign_mybtn {
+.reserve-generate-btn {
+  text-align: right;
+  padding: 10px 15px;
+}
+
+.reserve-generate-btn .sign_mybtn:last-child {
   margin-left: 10px;
 }
 
